--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        working-directory: /Documents/projett/JavaPathENProject8/TourGuide
 
 
