Add GitHub action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory: /home/yenx/Documents/projett/JavaPathENProject8/TourGuide
+        working-directory:  TourGuide
 
 
