--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,19 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'  # Utiliser Eclipse Temurin, une distribution de JDK maintenue par Adoptium
+          distribution: 'temurin'  # Utiliser Eclipse Temurin
+
+      - name: Install Local JARs
+        run: |
+          mkdir -p ~/.m2/repository/gpsUtil/gpsUtil/1.0.0
+          mkdir -p ~/.m2/repository/rewardCentral/rewardCentral/1.0.0
+          mkdir -p ~/.m2/repository/tripPricer/tripPricer/1.0.0
+
+          mvn install:install-file -Dfile=libs/gpsUtil.jar -DgroupId=gpsUtil -DartifactId=gpsUtil -Dversion=1.0.0 -Dpackaging=jar
+          mvn install:install-file -Dfile=libs/RewardCentral.jar -DgroupId=rewardCentral -DartifactId=rewardCentral -Dversion=1.0.0 -Dpackaging=jar
+          mvn install:install-file -Dfile=libs/TripPricer.jar -DgroupId=tripPricer -DartifactId=tripPricer -Dversion=1.0.0 -Dpackaging=jar
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory:  TourGuide
 
 
